auth-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server
  labels:
    component: auth-server
spec: 
  replicas: 3
  selector:
    matchLabels:
      component: auth-server
  template:
    metadata:
      labels:
        component: auth-server
    spec:
      containers:
        - name: auth-server
          image: docker.apple.com/<yourDockerImageName>
          imagePullPolicy: Always
          ports:
            - containerPort: 7000
