audio-ip-service.yaml
  
apiVersion: v1
kind: Service
metadata:
  name: audio-server
spec:
  type:  ClusterIP
  selector:
    component: audio-server <label from audio-server-deployment>
  ports:
    - port: 6000
      targetPort: 6000
