auth-ip-service.yaml
  
apiVersion: v1
kind: Service
metadata:
  name: auth-server
spec:
  type:  ClusterIP
  selector:
    component: auth-server
  ports:
    - port: 7000
      targetPort: 7000
