ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
     - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client
              servicePort: 3000
          - path: /auth/?(.*)
            backend:
              serviceName: auth-server
              servicePort: 7000
          - path: /audio/?(.*)
            backend:
              serviceName: audio-server
              servicePort: 6000
